--- a/allRounder/style.css
+++ b/allRounder/style.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   overflow: hidden;
   height: 100%;
-  background: url('./image.png') no-repeat center center;
+  background: url('./back.jpg') no-repeat center center;
   position: relative;
   height: 100vh;
   margin: 0;
